Clean up & instrument tenant management (#13355)